new start script